--- a/_scss/components/_navbar.scss
+++ b/_scss/components/_navbar.scss
@@ -37,4 +37,17 @@
   z-index: 3;
 }
 
+.global_nav__link {
+  font-size: 1.5rem;
+  color: #0E3877;
+}
+
+.global_nav__btn {
+  font-size: 1.5rem;
+  min-width: 130px;
+  color: #0E3877;
+}
+
+
+
 /* purgecss end ignore */
