--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<section class="bg-info text-white text-center">
+<section class="bg-info text-white text-center footer d-flex flex-column justify-content-center">
   <div class="container">
     <div class="row">
       <div class="col-12">
