--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,14 +12,14 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto font-weight-normal text-center mt-4 mt-sm-0">
+        <ul class="navbar-nav ml-auto font-weight-normal text-center mt-4 mt-sm-0 global-nav">
           {% for item in site.data.navigation %}
           <li class="nav-item">
-            <a class="nav-link" href="{{item.href}}">{{item.title}}</a>
+            <a class="nav-link global_nav__link" href="{{item.href}}">{{item.title}}</a>
           </li>
           {% endfor %}
         </ul>
-        <a href="" class="btn btn-outline-warning rounded-sm text-dark me-2">Donate</a>
+        <a href="" class="btn btn-outline-warning rounded-sm text-dark me-2 global_nav__btn">Donate</a>
       </div>
   </div>
 </nav>
