--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
   <div class="container" style="max-width: 1400px;">
     <a class="navbar-brand d-flex justify-content-center" href="https://dai.lids.mit.edu/">
       <img src="{{'img/DAI-Lab-Logo.svg' | relative_url }}" width="50" height="55" class="d-inline-block align-top logo" alt="Data Tracer" loading="lazy">
-      <span class="nav-text align-self-center h5 font-weight-normal ml-2">
+      <span class="nav-text align-self-center font-weight-normal ml-2 mb-0">
         DAI Lab Open Source
       </span>
     </a>
@@ -11,7 +11,7 @@
       <button class="navbar-toggler ml-auto my-2" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse text-center" id="navbarNav">
         <ul class="navbar-nav ml-auto font-weight-normal text-center mt-4 mt-sm-0 global-nav">
           {% for item in site.data.navigation %}
           <li class="nav-item">
@@ -19,7 +19,7 @@
           </li>
           {% endfor %}
         </ul>
-        <a href="" class="btn btn-outline-warning rounded-sm text-dark me-2 global_nav__btn">Donate</a>
+        <a href="" class="btn btn-warning rounded-sm text-dark me-2 global_nav__btn ml-lg-4">Donate</a>
       </div>
   </div>
 </nav>
