--- a/_scss/base/_global.scss
+++ b/_scss/base/_global.scss
@@ -10,7 +10,11 @@ body {
   padding-top: 87px;
 
   @include media-breakpoint-up(xl) {
-    padding-top: 0;
+    padding-top: 87px;
+  }
+
+  @include media-breakpoint-up(lg) { 
+    padding-top: 120px;
   }
 }
 
