--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   
     <meta name="robots" content="noindex" />
 
-    <link rel="stylesheet" href="{{'/css/main.css' | relative_url }}">
+    <link rel="stylesheet" href="{{'/css/main.css' | absolute_url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="icon" type="image/png" href="{{'/img/DAI-Lab-Logo.svg' | relative_url}}"/>
     <link rel="apple-touch-icon" href="{{'/img/DAI-Lab-Logo.svg' | relative_url}}">
