--- a/_scss/typography/_font-face.scss
+++ b/_scss/typography/_font-face.scss
@@ -2,21 +2,21 @@
 
 @font-face {
   font-family: "HelveticaNeue";
-  src: url("../fonts/HelveticaNeueLt.ttf") format("truetype");
+  src: url("https://dai-lab.github.io/opensource/fonts/HelveticaNeueLt.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "HelveticaNeue";
-  src: url("../fonts/HelveticaNeue Medium.ttf") format("truetype");
+  src: url("https://dai-lab.github.io/opensource/fonts/HelveticaNeue Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: "HelveticaNeue";
-  src: url("../fonts/HelveticaNeuBold.ttf") format("truetype");
+  src: url("https://dai-lab.github.io/opensource/fonts/HelveticaNeuBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
