--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
           </li>
           {% endfor %}
         </ul>
-        <a href="" class="btn btn-warning rounded-sm text-dark me-2 global_nav__btn ml-lg-4">Donate</a>
+        <a href="https://giving.mit.edu/search/node/Veeramachaneni" class="btn btn-warning rounded-sm text-dark me-2 global_nav__btn ml-lg-4">Donate</a>
       </div>
   </div>
 </nav>
