--- a/_scss/pages/_home-page.scss
+++ b/_scss/pages/_home-page.scss
@@ -94,3 +94,16 @@
   border-radius: 0px;
   background: #F6F6F6 url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 1rem center/8px 10px;
 }
+
+.filter-bar {
+  @include media-breakpoint-up(md) {
+    backdrop-filter: blur(2px);
+    position: -webkit-sticky;
+    position: sticky;
+    top: 4rem;
+    z-index: 10;
+    background: rgb(255,255,255);
+    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 80%,  rgba(255,255,255,0.9) 100%);
+    box-shadow: 0px 6px 15px 3px #FFFFFF;
+  }
+}
