--- a/css/main.css
+++ b/css/main.css
@@ -13919,6 +13919,20 @@ svg {
   background: #F6F6F6 url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 1rem center/8px 10px;
 }
 
+@media (min-width: 768px) {
+  .filter-bar {
+    -webkit-backdrop-filter: blur(2px);
+            backdrop-filter: blur(2px);
+    position: -webkit-sticky;
+    position: sticky;
+    top: 4rem;
+    z-index: 10;
+    background: white;
+    background: linear-gradient(0deg, white 0%, white 80%, rgba(255, 255, 255, 0.9) 100%);
+    box-shadow: 0px 6px 15px 3px #FFFFFF;
+  }
+}
+
 /* Layout */
 .footer {
   background-color: #E7ECFF;
